ci: add artifact

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,10 @@ jobs:
           lb clean --purge
           lb config
           lb build
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: iso
+          path: ${{ github.workspace }}/images/*.iso
+          compression-level: 0
+          if-no-files-found: error
