--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
           lb clean --purge
           lb config
           lb build
+          find .
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
