ci: add lb config

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,9 @@ jobs:
           apt-get install -y sudo git fakeroot live-build debootstrap debian-cd simple-cdd xorriso squashfs-tools debootstrap mtools curl jq
 
       - name: Build ISO
-        run: lb build
+        run: |
+          lb config
+          lb build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
