feat: use lzma initramfs compression

--- a/auto/config
+++ b/auto/config
@@ -18,5 +18,6 @@ lb config noauto \
 	--uefi-secure-boot enable \
 	--bootloaders "grub-pc grub-efi" \
 	--initramfs live-boot \
+	--initramfs-compression lzma \
 	--win32-loader false \
 	"${@}"
