--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update
-          apt-get install -y live-build
+          apt-get install --no-install-recommends -y live-build
 
       - name: Cache
         uses: actions/cache@v4
