feat: disable build-with-chroot

--- a/auto/config
+++ b/auto/config
@@ -6,6 +6,7 @@ dist="trixie"
 
 lb config noauto \
 --color \
+--build-with-chroot false \
 --archive-areas "main contrib non-free non-free-firmware" \
 --apt-source-archives false \
 --distribution "$dist" \
