--- a/auto/config
+++ b/auto/config
@@ -23,6 +23,7 @@ lb config noauto \
 --bootloaders "grub-pc grub-efi" \
 --initramfs live-boot \
 --chroot-squashfs-compression-type zstd \
+--chroot-squashfs-compression-level 5 \
 --memtest memtest86+ \
 --win32-loader false \
 "${@}"
