feat: use debootstrap minbase variant

--- a/auto/config
+++ b/auto/config
@@ -13,7 +13,7 @@ lb config noauto \
 --distribution "$dist" \
 --apt-indices false \
 --apt-recommends false \
---debootstrap-options "--include=apt-transport-https,ca-certificates,openssl" \
+--debootstrap-options "--variant minbase --include=apt-transport-https,ca-certificates,openssl" \
 --debconf-frontend noninteractive \
 --updates true \
 --backports true \
