feat: move systemd to bootstrap stage

--- a/auto/config
+++ b/auto/config
@@ -56,10 +56,10 @@ aarch64)
 esac
 
 fw_packages=$(IFS=','; printf '%s' "${firmwares[*]}")
-huge_packages="sddm,kwin-x11"
+extra_packages="systemd-sysv,sddm,kwin-x11"
 
 DEBOOTSTRAP_OPTS="--variant minbase \
-  --include=apt-transport-https,ca-certificates,openssl,${fw_packages},${huge_packages}"
+  --include=apt-transport-https,ca-certificates,openssl,${fw_packages},${extra_packages}"
 
 lb config noauto \
 --color \
