--- a/auto/config
+++ b/auto/config
@@ -56,7 +56,7 @@ aarch64)
 esac
 
 fw_packages=$(IFS=','; printf '%s' "${firmwares[*]}")
-extra_packages="systemd-sysv,sddm,kwin-x11"
+extra_packages="systemd-sysv,libpam-systemd,sddm,kwin-x11"
 
 DEBOOTSTRAP_OPTS="--variant minbase \
   --include=apt-transport-https,ca-certificates,openssl,${fw_packages},${extra_packages}"
