--- a/auto/config
+++ b/auto/config
@@ -64,6 +64,7 @@ extra_packages=(
     systemd-sysv
     libpam-systemd
     dbus-broker
+    dbus-user-session
     sddm
     kwin-x11
     firefox-esr
