--- a/auto/config
+++ b/auto/config
@@ -91,7 +91,7 @@ lb config noauto \
 --uefi-secure-boot enable \
 --bootloaders "grub-pc grub-efi" \
 --initramfs live-boot \
---chroot-squashfs-compression-type "xz -Xbcj $(case $(uname -m) in x86_64) echo x86;; aarch64) echo arm;; esac) -Xdict-size 1M -b 1M" \
+--chroot-squashfs-compression-type "xz -Xbcj $(case $(uname -m) in x86_64) echo x86;; aarch64) echo arm;; esac) -Xdict-size 1M -b 1M -e 'boot/initrd*'" \
 --memtest memtest86+ \
 --win32-loader false \
 "${@}"
