--- a/auto/config
+++ b/auto/config
@@ -58,7 +58,8 @@ extra_packages=(
     dbus-user-session
     sddm
     kwin-x11
-    epiphany-browser
+    plasma-discover-backend-flatpak
+    falkon
 )
 
 DEBOOTSTRAP_OPTS="--variant minbase \
