feat: add a bunch of things

--- a/auto/config
+++ b/auto/config
@@ -58,7 +58,8 @@ extra_packages=(
     dbus-user-session
     sddm
     kwin-x11
-    firefox-esr
+    gnome-software-plugin-flatpak
+    epiphany-browser
 )
 
 DEBOOTSTRAP_OPTS="--variant minbase \
