--- a/auto/config
+++ b/auto/config
@@ -56,6 +56,7 @@ extra_packages=(
     libpam-systemd
     dbus-broker
     dbus-user-session
+    gir1.2-glib-2.0
     sddm
     kwin-x11
     gnome-software-plugin-flatpak
